force-app/main/default/objects/Address_Validation_Status__e/Address_Validation_Status__e.object-meta.xml
<CustomObject>
    <description>Events sent for notifying the Lightning UI if an address has been validated.</description>
    <label>Address Validation Status</label>
    <pluralLabel>Address Validation Statuses</pluralLabel>
</CustomObject>