force-app/main/default/objects/Address_Validation_Status__e/fields/Ambiguous_Address_Options__c.field-meta.xml
<CustomField>
    <fullName>Ambiguous_Address_Options__c</fullName>
    <description>These are the addresses listed as potential candidates for ambiguous address replacements. This is in JSON format and should be serialized.</description>
    <label>Ambiguous Address Options</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>