force-app/main/default/objects/Address_Validation_Status__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Message if an error is present.</description>
    <label>Error Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>