force-app/main/default/objects/Address_Validation_Status__e/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <description>SObject Id of the related address validation</description>
    <label>Object Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>