force-app/main/default/objects/Address_Validation_Status__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>