force-app/main/default/objects/Address_Validation_Status__e/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Address validity.</description>
    <label>Valid?</label>
    <type>Checkbox</type>
</CustomField>